# peering-diag

./: .gitignore  AMELIORATIONS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
peering-diag/: Cargo.toml  README.md
peering-diag/docs/: exemple-diagnostic.md  plan-tests-temporels.md
peering-diag/src/: lib.rs  main.rs  types.rs
peering-diag/src/asn/: lookup.rs  mod.rs
peering-diag/src/lg/: analyzer.rs  db.rs  engine.rs  globalping.rs  mod.rs  myip.rs  query.rs
peering-diag/src/mtr/: engine.rs  heuristics.rs  mod.rs  probe.rs  tcp_probe.rs
peering-diag/src/report/: analyzer.rs  display.rs  history.rs  json_output.rs  maintenance.rs  mod.rs  storage.rs  temporal.rs
peering-diag/src/speedtest/: cascade.rs  filter.rs  http_measure.rs  iperf.rs  mod.rs  runner.rs  servers.rs  tier1_db.rs
peering-diag/src/web/: geo.rs  jobs.rs  mod.rs  server.rs  sse.rs
peering-diag/src/web/handlers/: db.rs  diag.rs  history.rs  mod.rs  watch.rs
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  index.css
web/src/components/: ErrorBoundary.tsx  HistoryChart.tsx  HopChart.tsx  KpiCard.tsx  MapView.tsx  TerminalOutput.tsx  VerdictBadge.tsx
web/src/contexts/: ThemeContext.tsx
web/src/hooks/: useJobStream.ts
web/src/pages/: CheckEnvPage.tsx  DbPage.tsx  DiagPage.tsx  HistoryPage.tsx  WatchPage.tsx
